# Beam

./: Cargo.toml  README.md
.github/workflows/: publish-obs.yml
beam-core/: Cargo.toml
beam-core/src/: events.rs  known_hosts.rs  lib.rs  profile.rs  secrets.rs
beam-core/src/session/: active.rs  clipboard.rs  connector.rs  framebuffer.rs  input.rs  mod.rs
beam-gtk/: Cargo.toml
beam-gtk/src/: cert_dialog.rs  display.rs  input_gtk.rs  main.rs  password_dialog.rs  profile_dialog.rs  settings.rs  window_manager.rs  window_session.rs
data/: org.lyraos.Beam.desktop  org.lyraos.Beam.metainfo.xml
packaging/: _service  beam.spec
