[package]
name = "beam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core RDP session engine for Beam, independent of any GUI toolkit"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }

# IronRDP
ironrdp-connector = "0.10"
ironrdp-session = "0.11"
ironrdp-pdu = "0.9"
ironrdp-core = "0.2"
ironrdp-graphics = "0.9"
ironrdp-tls = { version = "0.2", features = ["rustls"] }
ironrdp-tokio = "0.10"
ironrdp-cliprdr = "0.7"
ironrdp-error = "0.2"

# TLS certificate parsing (fingerprinting, matches the x509-cert version IronRDP itself uses)
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
sha2 = "0.11"

# Secrets (Secret Service, pure Rust)
oo7 = "0.6"

# Config
serde = { version = "1", features = ["derive"] }
toml = "1"
directories = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
bytes = "1"
smallvec = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
